Fix wrong margin of iframes, add dark background to aid in loading perception

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -500,7 +500,7 @@
 
   iframe {
     max-width: 100%;
-    margin: 2rem 0;
+    background: darken($body-bg, 5%);
 
     &[src*="gfycat"] {
       height: clamp(0px, calc((80vw - #{ $margin }) / 16 * 9), map-get($media-min-widths, lg) / 16 * 9);
